--- a/40128.md
+++ b/40128.md
@@ -2,7 +2,7 @@
 
 GitHubの鈴木です。
 
-当社でログを確認し"http_status: 500"のエラーが発生した原因を調査するため、`https://github.kddi.com/setup/support`から[Support Bundle](https://help.github.com/enterprise/2.8/admin/guides/enterprise-support/providing-data-to-github-enterprise-support/)をダウンロードして、https://enterprise.github.com/support/bundles/new?ticket=40128 にアップロードしてください。アップロードフォームにアクセスするには、https://enterprise.github.com にサインインしている必要があります。
+GitHubのEnterprise Supportチームでログを確認し"http_status: 500"のエラーが発生した原因を調査するため、`https://github.kddi.com/setup/support`から[Support Bundle](https://help.github.com/enterprise/2.8/admin/guides/enterprise-support/providing-data-to-github-enterprise-support/)をダウンロードして、https://enterprise.github.com/support/bundles/new?ticket=40128 にアップロードしてください。アップロードフォームにアクセスするには、https://enterprise.github.com にサインインしている必要があります。
 
 GitHub Enterpriseインスタンスがインターネットに接続されている場合は、ローカルPCから下記のコマンドを実行して、Support Bundleの作成とアップロードを一度に行うことが可能です。
 
